kubernetes/manifests/generated/production/infrastructure/argocd/1-manifest/service-argocd-argocd-redis-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/instance":"argocd","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"redis","helm.sh/chart":"redis-16.8.9"},"name":"argocd-redis-headless","namespace":"argocd"},"spec":{"clusterIP":"None","ports":[{"name":"tcp-redis","port":6379,"targetPort":"redis"}],"selector":{"app.kubernetes.io/instance":"argocd","app.kubernetes.io/name":"redis"},"type":"ClusterIP"}}
  labels:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-16.8.9
  name: argocd-redis-headless
  namespace: argocd
spec:
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: redis
  type: ClusterIP
