kubernetes/manifests/generated/production/infrastructure/argocd/1-manifest/ingress-argocd-argocd-argo-cd-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-cluster-issuer","nginx.ingress.kubernetes.io/ssl-redirect":"false","nginx.ingress.kubernetes.io/use-regex":"true"},"labels":{"app.kubernetes.io/component":"server","app.kubernetes.io/instance":"argocd","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"argo-cd","helm.sh/chart":"argo-cd-3.1.16"},"name":"argocd-argo-cd-server","namespace":"argocd"},"sp [...]
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: argo-cd
    helm.sh/chart: argo-cd-3.1.16
  name: argocd-argo-cd-server
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: oyedev.com
    http:
      paths:
      - backend:
          service:
            name: argocd-argo-cd-server
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - oyedev.com
    secretName: oyedev.com-tls
